tdf#106974 docx export: Crop is "long", not sal_Int16

I got size sal_Int16 from the return value type of the border
spacing, but somehow failed to lookup the return value of GraphicCrop.
It now matches .doc export's sal_Int32.
Bad mistake: regression 8eff1decd91cbfb10094c25d4cf1d2b434a4da72

Change-Id: Ie149630b9da9a067de319149f23ca21f78a186cf
Reviewed-on: https://gerrit.libreoffice.org/36200
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>